--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -19,7 +20,6 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "16.0.7",
-    "openai": "^4.77.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^1.5.0",
@@ -30,12 +30,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "10.4.20",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "postcss": "8.4.41",
     "tailwindcss": "3.4.14",
     "tailwindcss-animate": "1.0.7",
-    "postcss": "8.4.41",
-    "autoprefixer": "10.4.20",
     "typescript": "^5"
   }
 }
