--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -37,6 +37,7 @@ functions:
     events:
       - s3:
           bucket: ${env:UPLOAD_BUCKET}
+          existing: true
           event: s3:ObjectCreated:*
           rules:
             - suffix: .csv
